# mancala

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/contents/ui/: main.qml
